# glyph

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
crates/etymonoetic-interlingua/: AGENTS.md  Cargo.toml  README.md
crates/etymonoetic-interlingua/capsules/: manifest.json
crates/etymonoetic-interlingua/capsules/en/: alarmist.json  algorithm.json  certain.json  complete.json  concise.json  diagnose.json  enthusiasm.json  estimate.json  firm.json  friendly.json  guarantee.json  iconoclast.json  liability.json  manipulative.json  nice.json  nostalgia.json  persuasive.json  quarantine.json  radical.json  responsibility.json  safe.json  sarcasm.json  sincere.json  therapeutic.json  uncertain.json  urgent.json  verified.json  villain.json
crates/etymonoetic-interlingua/docs/: source-policy.md
crates/etymonoetic-interlingua/examples/: iconoclast.json  radical.json
crates/etymonoetic-interlingua/schemas/: semantic-capsule.schema.json
crates/etymonoetic-interlingua/src/: cli.rs  lib.rs  sources.rs  training.rs  validator.rs
crates/glyph-ei-bridge/: .gitignore  Cargo.toml  README.md
crates/glyph-ei-bridge/evals/fixtures/: codex_direct_sarcastic_sincere_apology.txt
crates/glyph-ei-bridge/evals/gates/: meaning_gate.json
crates/glyph-ei-bridge/evals/judges/: meaning_gate.json  side_by_side_semantic_safety.json
crates/glyph-ei-bridge/evals/memory/: README.md
crates/glyph-ei-bridge/evals/objectives/: meaning_gate.json
crates/glyph-ei-bridge/evals/scenarios/: codex_side_by_side.json  sarcastic_sincere_apology.json
crates/glyph-ei-bridge/src/: lib.rs  main.rs
crates/glyph-ei-bridge/tests/: killer_eval.rs
docs/: adjacent-systems.md  benchmark-gate.md  mvp.md  schema.md  semantic-control.md  static-proof-github-actions.yml  usage.md
scripts/: static-proof.sh
skills/unified-loop-theory/: README.md
spec/: README.md  controller-fingerprint.lock.json  controller-output.schema.json  generic-tool-plan.schema.json  glyph-ir.schema.json  glyph.ebnf  glyph.gbnf
spec/fixtures/: README.md  hello.glyph  hello.ir.json  hello.trace.json  repair.glyph  repair.ir.json  repair.trace.json
src/: cli.rs  lib.rs  main.rs  templates.rs
src/cli/: index.ts
src/etymonoetic_interlingua/: __init__.py  cli.py  templates.py  training.py
src/eval/: benchmark_report.rs  compression.rs  compression.ts  conformance.rs  controller.rs  controller_examples.rs  coverage.rs  curriculum.rs  dataset.rs  dataset_quality.rs  evidence.rs  examples.rs  examples.ts  fingerprint.rs  gate.rs  live_plan.rs  manifest.rs  mod.rs  offline_plan.rs  preflight.rs  replay.rs  (+4 more)
tests/: cli.rs  compression.test.ts  glyph.rs  ir.test.ts  parser.test.ts  runtime.test.ts  test_validator.py  validators.test.ts
(+43 files in other folders)
