[package]
name = "glyph"
version = "0.1.0"
edition = "2024"
description = "Glyph is a compact executable control language for small models operating high-level harnesses."
license = "MIT"

[[bin]]
name = "glyph"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
