[workspace]
members = [
    ".",
    "crates/glyph-ei-bridge",
    "crates/etymonoetic-interlingua",
]
resolver = "3"

[package]
name = "glyph"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "Glyph is a compact executable control language for small models operating high-level harnesses."
license = "MIT"
repository = "https://github.com/Agent-Pattern-Labs/glyph"
readme = "README.md"
keywords = ["agents", "automation", "controller", "dsl", "evals"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "glyph"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
