[package]
name = "etymonoetic-interlingua"
version = "0.1.0"
edition = "2024"
description = "AI-native semantic capsules for layered lexical meaning."
license = "MIT"
repository = "https://github.com/Agent-Pattern-Labs/etymonoetic-interlingua"

[lib]
name = "etymonoetic_interlingua"
path = "src/lib.rs"

[[bin]]
name = "ei"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
jsonschema = "0.37"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
