[package]
name = "glyph-ei-bridge"
version = "0.1.0"
edition = "2024"
description = "Bridge between Glyph executable control programs and Etymonoetic Interlingua semantic capsules."
license = "MIT"

[[bin]]
name = "glyph-ei-bridge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
etymonoetic-interlingua = { path = "../etymonoetic-interlingua" }
glyph = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
